--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -4,5 +4,5 @@
     <p>説明: <%= @post_image.caption %></p>
     <p>投稿ユーザー画像: <%= image_tag 'sample-author1.jpg' %></p>
     <p>ユーザーネーム: <%= @post_image.user.name %></p>
-    <p>投稿日: <%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+    <p>投稿日：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
 </div>
