--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div>
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <% if @user == current_user.id %>
+   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
 </div>
 
 <% @post_images.each do |post_image| %>
