--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,10 +1,3 @@
-<div>
-    <h3><%= @user.name %></h3>
-    <%= image_tag @user.get_profile_image(100,100) %>
-    <p><%= link_to "プロフィール編集", edit_user_registration_path(@user.id) %></p>
-</div>
-<% @post_images.each do |post_image| %>
-
 
 <div>
     <%= image_tag @post_image.get_image %>
@@ -16,4 +9,19 @@
     <% if @post_image.user == current_user %>
     <%= link_to "削除", post_image_path(@post_image), method: :delete %>
     <% end %>
+</div>
+
+<div>
+  <p>コメント件数：<%= @post_image.post_comments.count %></p>
+  <% @post_image.post_comments.each do |post_comment| %>
+    <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+    <%= post_comment.user.name %>
+    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <% end %>
+</div>
+<div>
+  <%= form_with model: [@post_image, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
 </div>
