--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,4 +1,3 @@
-
 <div>
     <%= image_tag @post_image.get_image %>
     <p>ショップ名: <%= @post_image.shop_name %></p>
@@ -17,7 +16,10 @@
     <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-  <% end %>
+    <% if post_comment.user == current_user %>
+     <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+    <% end %>
+    <% end %>
 </div>
 <div>
   <%= form_with model: [@post_image, @post_comment] do |f| %>
