--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -1,4 +1,4 @@
-div class="container">
+<div class="container">
   <div class="row no-gutters">
     <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">画像投稿フォーム</h5>
